# fcd2pbf

./: CMakeLists.txt  HOWTO  HOWTO.md  README  README.md  run-downsample-noise.sh  run-downsample.sh  run.sh
data/: gridTrace.fcd.xml  output.bbox  output.pbf
src/: CMakeLists.txt
src/core/: CMakeLists.txt  gps_trajectory.pb.cpp  gps_trajectory.pb.h  util.h
src/exec/: CMakeLists.txt  fcd2pbf.cpp
src/math/: CMakeLists.txt  linear_algebra.cpp  linear_algebra.h  linear_algebra_templcode.h
src/xmlparser/: CMakeLists.txt  README  xmlParser.cpp
